# leakage-model-testing

./: ANALYSIS.md  README.md  process_res.py  requirements.txt  run.sh  run_all.sh
analysis/: README.md  aes_enc-openssl.md  auth-libsodium.md  curve25519-libsodium.md  intel_doitm.md  poly1305-libsodium.md  salsa-libsodium.md  secretbox_easy-libsodium.md  sha512-libsodium.md  stream_xor-libsodium.md  x25519-libsodium.md
scripts/: README.md  postprocessor.py  run_campaign.py  symbolizer.py
src/: analyser.py  attack_aes_dec_ssi.py  attack_aes_dec_ssi_helper.c  attack_aes_enc_ssi.py  attack_auth_cr.py  attack_auth_ssi.py  attack_common.py  attack_stream_xor_ssi.py  attack_x25519_cs.py  attack_x25519_nrfc.py  attack_x25519_rfc.py  attack_x25519_rfc0.py  attack_x25519_ssi.py  branch.py  cli.py  config.py  dumper.py  elf_parser.py  fuzzer.py  helpers.py  input_generator.py  interfaces.py  model.py  runner.py  saved_test.py  service.py  test_vectors.py  zero_vectors.py
src/tracers/: README.md  execution_models.hy  leakage_models.hy  tracing.hy
targets/: .gitignore  build.sh  cc_models.c  clean.sh  cryptlib.c  crypto_rust.c  libjade.c  libsodium.c  nettle.c  speculate.c
targets/crypto/: Cargo.toml  crypto.h
targets/crypto/src/: lib.rs
