[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "crypto"
crate-type = ["staticlib"]  

[dependencies]
libc = "0.2"
sha2 = { version = "0.10", default-features = false }
salsa20 = "0.10.2"
poly1305 = "0.8.0"
x25519-dalek = "2.0.0"

[build-dependencies]
cbindgen = "0.12"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = 3
